--- a/Daejeon_test/style.css
+++ b/Daejeon_test/style.css
@@ -280,3 +280,56 @@ nav{
     visibility: hidden;
 }
 /* 비주얼 영역 */
+/* 3D */
+.gall_area{
+    position: relative;
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 250px;
+    background-color: #111;
+}
+
+.gall{
+    position: absolute;
+    width: 1440px;
+    height: 300px;
+    bottom: -150px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.box{
+    position: relative;
+    width: 300px;
+    height: 300px;
+    transform-style: preserve-3d;
+    display: flex;
+    transition: all 2s linear;
+}
+
+.box:hover{
+    transform: rotateY(-270deg);
+}
+
+.item{
+    width: 300px;
+    height: 300px;
+    position: absolute;
+}
+
+.item1{
+    transform: rotateY(0deg) translateZ(150px);
+}
+.item2{
+    transform: rotateY(90deg) translateZ(150px);
+}
+.item3{
+    transform: rotateY(180deg) translateZ(150px);
+}
+.item4{
+    transform: rotateY(270deg) translateZ(150px);
+}
+/* 3D */
