--- a/Daejeon_test/style.css
+++ b/Daejeon_test/style.css
@@ -333,3 +333,31 @@ nav{
     transform: rotateY(270deg) translateZ(150px);
 }
 /* 3D */
+/* 가로스크롤 */
+.width_area{
+    width: 100%;
+    height: 600px;
+    background-color: #eee;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.width{
+    width: 500px;
+    height: 1440px;
+    transform: rotate(90deg);
+    background-color: beige;
+    overflow-y: scroll;
+}
+
+.width::-webkit-scrollbar{
+    display: none;
+}
+
+.wbox{
+    width: 500px;
+    height: 260px;
+    margin-top: 28px;
+}
+/* 가로스크롤 */
