--- a/Gwangju_test/style.css
+++ b/Gwangju_test/style.css
@@ -3,6 +3,32 @@
     margin: 0;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
+body{
+    scroll-snap-type: y mandatory;
+}
+
+.topBtn{
+    position: fixed;
+    z-index: 4;
+    bottom: 10px;
+    right: 10px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    scroll-snap-align: start;
+    border: 1px solid black;
+}
+
+.topBtn img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
 ul li{
     padding-left: 0;
     list-style: none;
