--- a/3D/style.css
+++ b/3D/style.css
@@ -3,11 +3,16 @@
     margin: 0;
 }
 
+.container{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .box{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
     width: 400px;
     height: 400px;
     transform-style: preserve-3d;
