--- a/3D/style.css
+++ b/3D/style.css
@@ -28,6 +28,8 @@
     position: absolute;
     width: 400px;
     height: 400px;
+    border: 5px solid black;
+    opacity: 0.7;
 }
 
 .item1{transform: rotateY(0deg) translateZ(200px);}
